Add DebugBus support

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.tetraizor.scenesystem",
   "displayName": "Scene System",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": {
     "name": "Umuthan Ozel",
     "email": "ozelumuthan@gmail.com",
@@ -9,6 +9,7 @@
   },
   "description": "A scene management system that works additively to always include systems in an isolated scene.",
   "dependencies": {
+    "com.tetraizor.debugutils": "https://github.com/Tetraizor/Tetraizor.DebugUtils.git#1.0.0",
     "com.tetraizor.bootstrap": "https://github.com/Tetraizor/Tetraizor.Bootstrap.git#1.1.1"
   },
   "repository": {
